--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.0",
     "jquery": "^3.7.0",
+    "ng-infinite-scroll": "^1.3.0",
+    "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
